--- a/admin.html
+++ b/admin.html
@@ -320,7 +320,7 @@
 
     // ── CONFIG DAS SECÇÕES ────────────────────────────────────────────────────
     const SECOES = {
-        membros:     { tabela:'membros',       orderBy:'nome',          campos:camposMembros,    subTabs:['Membro','Filhos','Visitantes'] },
+        membros:     { tabela:'membros',       orderBy:'nome',          campos:camposMembros,    subTabs:['Dashboard','Membros','Visitantes'] },
         pastores:    { tabela:'pastores',      orderBy:'nome',          campos:camposPastores },
         links:       { tabela:'links',         orderBy:'nome',          campos:camposLinks },
         cultos:      { tabela:'cultos',        orderBy:'nome',          campos:camposCultos },
@@ -353,10 +353,12 @@
         const ativoKey = cfg.ativoKey || 'ativo';
         const q        = getQ();
         const temSubTabs = !!cfg.subTabs;
-        if (temSubTabs && subTabAtiva >= 1) {
-            if (secaoAtiva === 'membros' && subTabAtiva === 1) { renderInfoSubTab(); return; }
-            if (secaoAtiva === 'membros' && subTabAtiva === 2) { renderVisitantesTab(); return; }
-            if (secaoAtiva !== 'membros'  && subTabAtiva === 1) { renderInfoSubTab(); return; }
+        if (temSubTabs && secaoAtiva === 'membros') {
+            if (subTabAtiva === 0) { renderDashboardMembros(); return; }
+            if (subTabAtiva === 1) { /* cai para renderSecao normal abaixo */ }
+            if (subTabAtiva === 2) { renderVisitantesTab(); return; }
+        } else if (temSubTabs && subTabAtiva >= 1) {
+            if (secaoAtiva !== 'membros' && subTabAtiva === 1) { renderInfoSubTab(); return; }
         }
         let lista = [...registos];
         if (!filtroInativo) lista = lista.filter(r => r[ativoKey] !== false);
@@ -704,10 +706,95 @@
     }
 
     function toggleFiltroInativo() { filtroInativo = !filtroInativo; renderSecao(); }
-    function setSubTab(idx) { subTabAtiva = idx; renderSecao(); }
+    async function setSubTab(idx) {
+        subTabAtiva = idx;
+        // Garante que visitantes estão carregados ao mudar para essa aba
+        if (secaoAtiva === 'membros' && idx === 2 && !visitantes.length) {
+            await carregarVisitantes();
+        }
+        renderSecao();
+    }
 
-    // ── VISITANTES ────────────────────────────────────────────────────────────
-    let visitantes = [];
+    // ── DASHBOARD MEMBROS ─────────────────────────────────────────────────────
+    function renderDashboardMembros() {
+        const cfg = SECOES['membros'];
+        const totalMembros    = registos.filter(r => r.ativo !== false).length;
+        const totalLideres    = registos.filter(r => r.e_lider && r.ativo !== false).length;
+        const totalPresbiteros= registos.filter(r => r.e_presbitero && r.ativo !== false).length;
+        const totalVoluntarios= registos.filter(r => r.e_voluntario && r.ativo !== false).length;
+        const totalVisitantes = visitantes.filter(v => v.ativo !== false && !(v.convertido && v.membro_id)).length;
+        const totalConvertidos= visitantes.filter(v => v.convertido && v.membro_id).length;
+
+        // Aniversários do mês
+        const mesAtual = new Date().getMonth() + 1;
+        const anivMes  = registos.filter(r => {
+            if (!r.data_nascimento || r.ativo === false) return false;
+            return parseInt(r.data_nascimento.split('-')[1]) === mesAtual;
+        });
+
+        const statCard = (num, label, cor, sub='') => `
+            <div style="background:var(--bg-card);border:1px solid var(--border);border-radius:12px;padding:16px;text-align:center">
+                <div style="font-family:var(--font-title);font-size:28px;font-weight:700;color:${cor}">${num}</div>
+                <div style="font-size:11px;color:var(--text-faint);margin-top:3px;text-transform:uppercase;letter-spacing:1px">${label}</div>
+                ${sub ? `<div style="font-size:10px;color:var(--text-faint);margin-top:2px">${sub}</div>` : ''}
+            </div>`;
+
+        let html = `
+    <div class="sub-tabs">
+        ${cfg.subTabs.map((t,i)=>`<button class="sub-tab ${subTabAtiva===i?'active':''}" onclick="setSubTab(${i})">${t}</button>`).join('')}
+    </div>
+    <div style="padding:12px 16px">
+
+        <div style="font-family:var(--font-title);font-size:9px;letter-spacing:2px;text-transform:uppercase;color:var(--text-faint);margin-bottom:8px">Membros</div>
+        <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:8px;margin-bottom:16px">
+            ${statCard(totalMembros,    'Total Membros',    'var(--primary-dark)')}
+            ${statCard(totalLideres,    'Líderes',          'var(--primary)')}
+            ${statCard(totalPresbiteros,'Presbíteros',      'var(--primary)')}
+            ${statCard(totalVoluntarios,'Voluntários',      'var(--green)')}
+        </div>
+
+        <div style="font-family:var(--font-title);font-size:9px;letter-spacing:2px;text-transform:uppercase;color:var(--text-faint);margin-bottom:8px">Visitantes</div>
+        <div style="display:grid;grid-template-columns:repeat(2,1fr);gap:8px;margin-bottom:16px">
+            ${statCard(totalVisitantes, 'Visitantes Activos','var(--orange,#e65100)', 'Por converter')}
+            ${statCard(totalConvertidos,'Convertidos',       'var(--green)',          'Já são membros')}
+        </div>`;
+
+        if (anivMes.length > 0) {
+            html += `
+        <div style="font-family:var(--font-title);font-size:9px;letter-spacing:2px;text-transform:uppercase;color:var(--text-faint);margin-bottom:8px">
+            🎂 Aniversários este mês (${anivMes.length})
+        </div>
+        <div style="display:flex;flex-direction:column;gap:6px;margin-bottom:16px">`;
+            anivMes.sort((a,b)=>{
+                const da = parseInt(a.data_nascimento?.split('-')[2]||0);
+                const db = parseInt(b.data_nascimento?.split('-')[2]||0);
+                return da - db;
+            }).forEach(m => {
+                const dia  = m.data_nascimento?.split('-')[2];
+                const foto = m.foto_url
+                    ? `<img src="${m.foto_url}" style="width:32px;height:32px;border-radius:50%;object-fit:cover;flex-shrink:0" onerror="this.style.display='none'">`
+                    : `<div style="width:32px;height:32px;border-radius:50%;background:var(--primary-faint);color:var(--primary-dark);display:flex;align-items:center;justify-content:center;font-size:12px;flex-shrink:0">${(m.nome||'?')[0]}</div>`;
+                html += `<div style="display:flex;align-items:center;gap:10px;background:var(--bg-card);border:1px solid var(--border);border-radius:10px;padding:8px 12px">
+                    ${foto}
+                    <div style="flex:1">
+                        <div style="font-size:13px;font-weight:600;color:var(--text-main)">${m.nome}</div>
+                        <div style="font-size:11px;color:var(--text-faint)">Dia ${dia}${m.e_lider?' · Líder':''}${m.e_presbitero?' · Presbítero':''}</div>
+                    </div>
+                    <div style="font-size:20px">🎂</div>
+                </div>`;
+            });
+            html += '</div>';
+        }
+
+        html += `
+        <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px">
+            <button class="btn-save" style="margin:0" onclick="setSubTab(1)">Ver Membros →</button>
+            <button class="btn-save" style="margin:0;background:var(--primary-faint);color:var(--primary-dark);border:1px solid var(--border)" onclick="setSubTab(2)">Ver Visitantes →</button>
+        </div>
+    </div>`;
+
+        document.getElementById('main-content').innerHTML = html;
+    }
     async function carregarVisitantes() {
         visitantes = await sb('visitantes?select=*&order=nome') || [];
     }
