--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@
                 <div class="icon-wrap ic-red"></div>
                 <span class="label">Bíblia</span>
             </a>
+
+            <a href="pdv.html" target="_blank" class="btn-icon">
+                <div class="icon-wrap ic-gold"></div>
+                <span class="label">PDV</span>
+            </a>
+            
             <a href="chat.html" class="btn-icon btn-icon--wide">
                 <div class="icon-wrap ic-gold"></div>
                 <span class="label">Chat<br>Assistente Virtual Zion Lisboa</span>
